--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-packages/visualizeComponents/node_modules
-packages/visualizeConfig/node_modules
-packages/visualizeLayout/node_modules
-packages/visualizeRender/node_modules
+*/node_modules
+node_modules
+# yarn
+yarn.lock
+package-lock.json
